updated title to vscode

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ dangerexperiement dangerexperiment dangerexperiement
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Im temp</title>
+    <title>Title on VScode</title>
 </head>
 
 <body>
